# Alarmsystem-Dev

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Agents-gpt-gemini.md  Architektur-Stack-Konzept.md  CLAUDE.md  Die Hintergrundgeschichte.txt  ONBOARDING.md  Power-Interest-Grid.md  Prüfungsleistung Anforderungen.txt  README.md  Randbedinungsmetriken.md  Stakeholderanalyse.md  Studierenden-Handreichung.txt  Usecase-quick.md  Zeitplan.txt  claude-sync.md  probe_claude_review.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh  slide_parser.py
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.kimi-code/: PROJECT.md
02-Arbeitsdokumente/: ADR-E40-Failsafe-Multi-Layer.md  ADR-E43-Sensorzustand-Transparenz.md  ADR-E44-G1-Kontextfelder.md  ADR-E45-Reifpunkt-Korrektur.md  Andi-Entscheidungslog.md  Anfrage-G1.md  Anfrage-G3.md  Architekturdiagramm.md  Backend-Env-Vorlage-Archiv.md  Backend-Konzept.md  Branch-PR-Konventionen-DoR-DoD.md  DTB-38-Review-Protokoll.md  DTB-Backlog-Uebersicht.md  Entscheidungslog-Lucas-Systemarchitektur.md  Frontend-Hosting-Manual.md  Pi-Setup.md  Projektplan-Backend.md  Projektplan-Jira-Backlog-G2.md  Schwellenwerte.md  (+16 more)
04-Source-code/: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
04-Source-code/config/: README.md  thresholds.json
04-Source-code/docs/: API_FROZEN_v1.md  agent-live-test-manual.md  demo-showcase.md  dev-db-setup.md  live-test-runbook.md  pi-deploy.md
04-Source-code/docs/api/v1/: g1-consumed.openapi.yaml  openapi.yaml
04-Source-code/migrations/: grants.sql  schema.sql
04-Source-code/source/: .env.example  .gitignore
04-Source-code/src/: __init__.py  app_factory.py  main.py
04-Source-code/src/alarm/: __init__.py  generation.py  hysterese.py  riskhysterese.py  service.py
04-Source-code/src/api/: __init__.py  broadcaster.py  exceptions.py  responses.py  runtime.py  security.py  v1.py
04-Source-code/src/assessment/: __init__.py  core.py  failsafe.py  service.py  utils.py
04-Source-code/src/config/: __init__.py  constants.py  loader.py
04-Source-code/src/forecast/: __init__.py  bridge.py  trend.py
04-Source-code/src/ingest/: __init__.py  poller.py
04-Source-code/src/model/: __init__.py  enums.py  schemas.py
04-Source-code/src/storage/: __init__.py  acknowledgement_repository.py  alarm_repository.py  assessment_repository.py  audit_repository.py  database.py  repository.py  threshold_set_repository.py
04-Source-code/tests/: _db_helpers.py  _sql_splitter.py  conftest.py  sse_helpers.py  test_acknowledgement_repository.py  test_alarm_broadcaster.py  test_alarm_generation.py  test_alarm_hysterese.py  test_alarm_repository.py  test_alarm_repository_integration.py  test_alarm_service.py  test_alarm_stream_endpoint.py  test_api_alarm_ack.py  test_api_alarms.py  test_api_audit.py  test_api_readings.py  test_api_security.py  test_api_thresholds.py  test_api_thresholds_write.py  test_api_write_endpoints.py  test_assessment.py  test_assessment_alarm_cycle.py  test_assessment_current_endpoint.py  test_assessment_hysterese_integration.py  test_assessment_repository_integration.py  test_assessment_service.py  test_assessment_service_integration.py  test_assessment_utils.py  test_audit_repository.py  test_config_loading.py  test_contract_enum_sync.py  test_cors.py  test_database.py  test_demo_feed.py  test_displayed_risk_level_persistence.py  test_e2e_failsafe_api.py  test_e2e_ingest_assessment_api.py  test_failsafe.py  test_failsafe_integration.py  test_forecast.py  (+20 more)
04-Source-code/tools/: __init__.py  alarmsystem.service  check_hardcoded_thresholds.py  check_rb01_no_actor_endpoints.py  purge_readings.py  run-local.ps1  setup-pi.sh  testrun-sim.sh  update-pi.sh
04-Source-code/tools/demo/: __init__.py  feed_core.py  g1_feed.py
04-Source-code/tools/g1_sim/: README.md  g1_sim.py  g1_state.example.json
(+37 files in other folders)
