[project]
name = "alarmsystem-dev"
version = "0.0.1"
description = "G2 Backend — Vereisungs-Erfassung & -Bewertung (Prototyp, T0)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

# SQLite ist Teil der Python-Standardbibliothek (Modul `sqlite3`) → keine Extra-Abhängigkeit.

[tool.uv]
# T0: noch kein installierbares Paket (kein `src/`-Layout) → nur Umgebung + Deps bereitstellen,
# Projekt selbst NICHT bauen. Sobald importierbarer Code nötig ist: `[build-system]` + `src/` ergänzen.
package = false

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",      # TestClient / API-Tests
    "ruff>=0.5",        # Formatter + Linter
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true
