[project]
name = "alarmsystem-backend-g2"
version = "0.1.0"
description = "Backend G2 — Vereisungserkennung ANR"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pymysql>=1.1",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
