[project]
name = "alarmsystem-backend-g2"
version = "0.1.0"
description = "Backend G2 — Vereisungserkennung ANR"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pymysql>=1.1",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "real_clock: Test laeuft gegen die echte Uhr (ohne die frozen_now-Fixture)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
# Explizites Format-Profil (DTB-68) — entspricht ruff-Standard (= black-kompatibel).
# CI-Gate: `ruff format --check .` in test.yml prueft Konformitaet vor jedem Merge.
# Lokal korrigieren mit: ruff format .
# Exakt gepinnte ruff-Version (requirements-dev.txt) stellt sicher, dass lokal == CI.
quote-style = "double"
indent-style = "space"
line-ending = "auto"
